tests/regression/errors/basic/undefined_var_22.csd
// Undefined variable test 22
vibez.spill("Using undefined:", undefined_var_22)
sus result drip = missing_variable + 22
